@@ -1,3 +1,9 @@
+2005-02-01  Rodrigo Moya <rodrigo@novell.com>
+
+	* calendar/e-cal-backend-exchange-calendar.c (create_object,
+	modify_object_with_href, remove_object): removed usage of
+	removed categories API.
+
 2005-01-29  Sarfraaz Ahmed <asarfraaz@novell.com>
 
         * storage/exchange-hierarchy-webdav.c (hierarchy_new_folder):
